--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.5.6",
-    "react": "^18",
+    "@portabletext/react": "^3.0.11",
+    "@sanity/client": "^6.4.9",
+    "@sanity/icons": "^2.0.0",
+    "@sanity/image-url": "1",
+    "@sanity/types": "^3.0.0",
+    "@sanity/ui": "^1.0.0",
+    "@sanity/vision": "3",
+    "next": "^13.0.0",
+    "next-sanity": "5.5.8",
+    "react": "^18.0.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.47.0"
+    "react-hook-form": "^7.47.0",
+    "sanity": "^3.0.0",
+    "styled-components": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
