--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
-    "typescript": "^5"
+    "typescript": "5.3.3"
   }
 }
