--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.1.1",
     "@portabletext/react": "^3.0.11",
     "@sanity/client": "^6.4.9",
     "@sanity/icons": "^2.0.0",
@@ -18,16 +20,19 @@
     "@sanity/vision": "3",
     "next": "^13.0.0",
     "next-sanity": "5.5.8",
+    "postcss": "^8.4.32",
     "react": "^18.0.0",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "sanity": "^3.0.0",
-    "styled-components": "^6.0.0"
+    "styled-components": "^6.0.0",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "typescript": "5.3.3"
