--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sanity/vision": "3",
     "next": "^13.0.0",
     "next-sanity": "5.5.8",
+    "nextjs-google-analytics": "^2.3.3",
     "postcss": "^8.4.32",
     "react": "^18.0.0",
     "react-dom": "^18",
