--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^13.5.6",
     "next-sanity": "5.5.8",
     "nextjs-google-analytics": "^2.3.3",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.4.32",
     "react": "^18.0.0",
     "react-dom": "^18",
