--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sanity/vision": "3",
     "next": "^13.5.6",
     "next-sanity": "5.5.8",
+    "next-sitemap": "^4.2.3",
     "nextjs-google-analytics": "^2.3.3",
     "node-fetch": "^3.3.2",
     "postcss": "^8.4.32",
